--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.2.0",
     "bootstrap": "^4.5.3",
     "digital": "^0.0.1",
+    "firebase": "^9.17.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
