--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sunil-portfolio",
+  "name": "Nanthida-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.2.6"
   }
 }
